--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
