--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.3
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_lints: ^3.0.0
