Add colors list view to edit note view + finish the whole app

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,9 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    camel_case_types: ignore
     non_constant_identifier_names: ignore
+    use_key_in_widget_constructors: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
